# pysty

./: README.md  pyproject.toml
examples/: fastapi_demo.py
src/pysty/: __init__.py  base.py  text.py
src/pysty/buttons/: __init__.py  default_button.py
src/pysty/cards/: __init__.py  default_card.py
