[project]
name = "pysty"
version = "0.1.1"
description = "UI components as typed Python Objects"
authors = [{ name = "Subha Saha", email = "comebackcobain@gmail.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ui", "tailwind", "flowbite", "design-system", "python-ui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: User Interfaces",
]

# --- ONLY REAL LIB DEPENDENCIES ---
dependencies = [
    "pydantic>=2.8",
    "dominate>=2.9.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://github.com/subhsaha/pysty"
Repository = "https://github.com/subhsaha/pysty"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pysty"]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.8",
    "uvicorn>=0.38.0",
]

examples = [
    "fastapi[standard]>=0.124.0",
    "uvicorn>=0.38.0",
    "streamlit>=1.50.0",

]
